# py-rtoon

./: Cargo.toml  README.md  pyproject.toml
.claude/: settings.local.json
.github/: CHANGELOG_WORKFLOWS.md  WORKFLOWS.md  workflow-doc.md
.github/workflows/: ci.yml  test.yml
examples/: encode_decode.py
src/py_rtoon/: __init__.py
src/tests/: test_basic.py  test_delimiters.py  test_edge_cases.py  test_options.py  test_roundtrip.py
