[project]
name = "py-rtoon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Prem Chotepanit", email = "prem.ch@ku.th" }
]
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.12.3",
]

[tool.maturin]
module-name = "py_rtoon._core"
python-packages = ["py_rtoon"]
python-source = "src"

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { file = "src/**/*.rs" }, { file = "Cargo.toml" }, { file = "Cargo.lock" }]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[dependency-groups]
dev = [
    "maturin>=1.9.6",
    "pytest>=8.4.2",
]
